--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,27 @@
 .card {
   padding: 2em;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+  background-color: lightgreen;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px gray;
+  color: rgb(0, 0, 0);
+  font-size: 1.6rem;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 0px 0px 5px gray;
 }
+
+/* .card-img {
+  width: 50%;
+  margin-bottom: 0.5rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: inherit;
+  box-shadow: inherit;
+} */
 
 .read-the-docs {
   color: #888;
