--- a/src/index.css
+++ b/src/index.css
@@ -38,14 +38,15 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #1a1a1a2e;
   cursor: pointer;
   transition: border-color 0.25s;
+  width: 40%;
+
 }
 button:hover {
   border-color: #646cff;
@@ -64,6 +65,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #9ba892;
+    background-color: #9ba8923e;
   }
 }
