--- a/src/App.css
+++ b/src/App.css
@@ -35,29 +35,59 @@
 
 .card {
   padding: 2em;
-  display: flex;
-  flex-flow: row;
-  justify-content: center;
-  width: 100%;
-  padding: 1rem;
-  background-color: lightgreen;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px gray;
-  color: rgb(0, 0, 0);
-  font-size: 1.6rem;
-  font-weight: 500;
-  text-align: center;
-  text-shadow: 0px 0px 5px gray;
 }
-
-/* .card-img {
-  width: 50%;
-  margin-bottom: 0.5rem;
-  background-color: rgb(255, 255, 255);
-  border-radius: inherit;
-  box-shadow: inherit;
-} */
 
 .read-the-docs {
   color: #888;
 }
+
+.PokemonCard{
+  height: 40em;
+  width: 30em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid white;
+  border-radius: 15px;
+  transition: 0.3s ease-in-out;
+  background-color: grey;
+  box-shadow: 0px 1px 12px 4px;
+}
+.PokemonCardImg{
+
+  width: 25em;
+  background: white;
+  border-radius: 16px 16px 16px 16px;
+  margin: 1.5rem;
+  box-shadow: 0 0 11px 5px ;
+  transition: 0.3s ease-in-out;
+}
+
+.BulbasaurCase{
+ padding: 1.5em 0;
+  margin: 1.5em;
+  width: 25em;
+  text-transform: uppercase;
+  background: white;
+  border-radius: 15px;
+  color: grey;
+  box-shadow: 0  0 11px 5px white;
+  font-weight: bold;
+  transition: 0.3s ease-in-out;
+}
+ .PokemonCard:hover{
+  scale: 1.1;
+  box-shadow: 0  0 15px 9px white;
+ }
+
+ .PokemonCardImg:hover{
+  filter: drop-shadow(0 0 2em grey);
+  scale: 0.9;
+  box-shadow: 0  0 15px 9px white;
+ }
+
+ .BulbasaurCase:hover{
+  scale: 0.9;
+  box-shadow: 0  0 15px 9px white;
+ }
