--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   color: #888;
 }
 
-.PokemonCard{
+.pokemonCard{
   height: 40em;
   width: 30em;
   display: flex;
@@ -54,7 +54,8 @@
   background-color: grey;
   box-shadow: 0px 1px 12px 4px;
 }
-.PokemonCardImg{
+
+.pokemonCardImg{
 
   width: 25em;
   background: white;
@@ -64,30 +65,14 @@
   transition: 0.3s ease-in-out;
 }
 
-.BulbasaurCase{
- padding: 1.5em 0;
-  margin: 1.5em;
-  width: 25em;
-  text-transform: uppercase;
-  background: white;
-  border-radius: 15px;
-  color: grey;
-  box-shadow: 0  0 11px 5px white;
-  font-weight: bold;
-  transition: 0.3s ease-in-out;
-}
- .PokemonCard:hover{
+
+ .pokemonCard:hover{
   scale: 1.1;
   box-shadow: 0  0 15px 9px white;
  }
 
- .PokemonCardImg:hover{
-  filter: drop-shadow(0 0 2em grey);
-  scale: 0.9;
-  box-shadow: 0  0 15px 9px white;
- }
-
- .BulbasaurCase:hover{
+ .pokemonCardImg:hover{
+  filter: drop-shadow(0 0 2em white);
   scale: 0.9;
   box-shadow: 0  0 15px 9px white;
  }
